delete some redundant comments